<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    tools:context=".Confirmar_Datos">

    <TextView
        android:text="@string/conFir"
        android:textSize="@dimen/textoEditar"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />
    <TextView
        android:id="@+id/tvNombreC"
        android:text="Nombre completo"
        android:textSize="@dimen/textoPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingDatos"
        android:paddingBottom="@dimen/paddingDatos"
        >
        <TextView
            android:textSize="@dimen/textoPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"/>
        <TextView
            android:id="@+id/tvFecha"
            android:text="12/12/2021"
            android:textSize="@dimen/textoPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingDatos"
        android:paddingBottom="@dimen/paddingDatos"
        >
        <TextView
            android:textSize="@dimen/textoPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telTv"/>
        <TextView
            android:id="@+id/tvTelefono"
            android:text="429101010"
            android:textSize="@dimen/textoPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingDatos"
        android:paddingBottom="@dimen/paddingDatos"
        >
        <TextView
            android:textSize="@dimen/textoPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailTv"/>
        <TextView
            android:id="@+id/tvCorreo"
            android:text="correo@hotmail.com"
            android:textSize="@dimen/textoPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingDatos"
        android:paddingBottom="@dimen/paddingDatos"
        >
        <TextView
            android:textSize="@dimen/textoPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DesTv"/>
        <TextView
            android:id="@+id/tvDescripcion"
            android:text="Este es un comentario"
            android:textSize="@dimen/textoPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/btnEditar"
        android:layout_width="230dp"
        android:layout_height="50dp"/>
</LinearLayout>